# ilang-types

./: .gitignore  CMakeLists.txt  README.md  ilang-types.kdev4  mainpage.dox
.kdev4/: ilang-types.kdev4
include/ilang/: Type.hpp
lib/: CMakeLists.txt  Type.cpp
src/: Type.cpp
